# OpenGL-game

./: .gitignore  CMakeLists.txt  README.md
assets/models/: model.mtl
assets/shaders/: basic.frag  basic.vert  light_source.frag
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp  world_object.cpp  world_object.h
src/light/: light_source.cpp  light_source.h
src/main_elements/: camera.cpp  camera.h  game_controller.cpp  game_controller.h  window_manager.cpp  window_manager.h
src/meshes/: mesh.cpp  mesh.h  mesh_factory.cpp  mesh_factory.h  mesh_node.cpp  mesh_node.h  renderable.h  vertex_data.cpp  vertex_data.h
src/shaders/: shader_factory.cpp  shader_factory.h  shader_program.cpp  shader_program.h  single_shader.cpp  single_shader.h
src/textures/: texture.cpp  texture.h  texture_type_handler.cpp  texture_type_handler.h
src/utils/: library_loader.cpp  library_loader.h
